--- a/Ujjwal_Project/app/src/main/res/values/strings.xml
+++ b/Ujjwal_Project/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">AirAsia_Hack</string>
     <string name="action_settings">Settings</string>
+    <string name="no_network">No internet available</string>
 </resources>
